styles.css
@import url('https://fonts.googleapis.com/css?family=Inter');
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
body {
  background-color: #202020;
  color: white;
  font-family: 'VT323', monospace;
  font-size: 22px;
}
h1 {
  padding: 0px;
  margin: 0;
  align-items:left;
  margin: 0;
  padding: 0;
  font-size: 30pt;
  line-height: 30px;
}
.code-container {
  background: rgb(48, 48, 48);
  border: 1px solid #ccc;
  max-height: 45vh;
  width: auto;
  font-size: 14px;
  padding: 1vh 0
}
.terminal-text {
  --char-count: 0;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
  border-right: 8px solid white; 
  animation: 
    typing 1.5s steps(var(--char-count, 20), end),
    blink 1s step-end infinite;
}

@keyframes typing {
  from { width: 0; }
  to { width: calc(var(--char-count) * 1ch); }
}

@keyframes blink {
  from, to { border-right-color: transparent; }
  50% { border-right-color: white; }
}

.container {
  line-height: 8px;
  display: flex;

}
.container div {
  margin-top: 0;
  margin-left: 4px;
  padding: 0px;
  align-items: center;
}

.vl {
  position: absolute;
  left: 5%;
  border-right: 2px solid white;
  height: 100%;
}

.content {
  width: 300px
}

